# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,8 @@ import transactionsRouter from "./transactions";
 import notificationsRouter from "./notifications";
 import dashboardRouter from "./dashboard";
 import adminRouter from "./admin";
+import beneficiariesRouter from "./beneficiaries";
+import vouchersRouter from "./vouchers";
 
 const router: IRouter = Router();
 
@@ -16,5 +18,7 @@ router.use(transactionsRouter);
 router.use(notificationsRouter);
 router.use(dashboardRouter);
 router.use(adminRouter);
+router.use(beneficiariesRouter);
+router.use(vouchersRouter);
 
 export default router;
